--- a/src/app/layouts/full/horizontal/header/header.component.html
+++ b/src/app/layouts/full/horizontal/header/header.component.html
@@ -224,7 +224,7 @@
             <span class="f-s-14 d-block m-b-4">Designer</span>
             <span class="d-flex align-items-center">
               <i-tabler name="mail" class="icon-15 m-r-4"></i-tabler>
-              info&#64;modernize.com
+              info&#64;issp.com
             </span>
           </div>
         </div>
