--- a/src/app/pages/authentication/side-login/side-login.component.html
+++ b/src/app/pages/authentication/side-login/side-login.component.html
@@ -37,7 +37,7 @@
       >
         <div class="row justify-content-center w-100">
           <div class="col-lg-9 max-width-form">
-            <h4 class="f-w-700 f-s-24 m-0">Welcome to Modernize</h4>
+            <h4 class="f-w-700 f-s-24 m-0">Welcome to ISSP</h4>
             <span class="f-s-14 d-block mat-body-1 m-t-8"
               >Your Admin Dashboard</span
             >
@@ -138,7 +138,7 @@
               <!-- input -->
             </form>
             <span class="d-block f-w-500 d-block m-t-24"
-              >New to Modernize?
+              >New to ISSP?
               <a
                 [routerLink]="['/authentication/side-register']"
                 class="text-decoration-none text-primary f-w-500 f-s-14"
