--- a/src/app/pages/theme-pages/landingpage/landingpage.component.html
+++ b/src/app/pages/theme-pages/landingpage/landingpage.component.html
@@ -163,7 +163,7 @@
                 dashboard
               </h1>
               <p class="f-s-18 p-y-24 m-t-12 m-0 banner-subtitle">
-                Modernize comes with light & dark color skins, well designed
+                ISSP comes with light & dark color skins, well designed
                 dashboards, applications and pages.
               </p>
               <div class="m-t-24 hstack">
@@ -331,7 +331,7 @@
           <div class="col-lg-8 col-sm-11">
             <h2 class="section-title text-center">
               Increase speed of your development and launch quickly with
-              Modernize
+              ISSP
             </h2>
           </div>
         </div>
@@ -604,7 +604,7 @@
               <img src="assets/images/landingpage/favicon.png" alt="logo" />
             </span>
             <div class="f-s-14 m-t-8">
-              All rights reserved by Modernize. Designed & Developed by
+              All rights reserved by ISSP. Designed & Developed by
               <a
                 [routerLink]="['https://adminmart.com/']"
                 class="mat-subtitle-2"
