--- a/src/app/pages/ui-components/toolbar/toolbar.component.html
+++ b/src/app/pages/ui-components/toolbar/toolbar.component.html
@@ -128,7 +128,7 @@
       </mat-card-header>
       <mat-card-content class="b-t-1">
         <mat-toolbar>
-          <span>Modernize</span>
+          <span>ISSP</span>
         </mat-toolbar>
       </mat-card-content>
     </mat-card>
