--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -27,7 +27,7 @@
             }
           </mat-nav-list>
         </ng-scrollbar>
-        <div class="p-24 m-t-auto profile-bar">
+        <div class="p-24 m-t-auto profile-bar d-none">
           <div class="bg-light-accent d-flex align-items-center rounded p-16">
             <img src="/assets/images/profile/user-1.jpg" class="rounded-circle" width="40" />
             <div class="m-l-16">
@@ -59,7 +59,7 @@
           }
         </mat-nav-list>
       </ng-scrollbar>
-      <div class="p-24 m-t-auto profile-bar">
+      <div class="p-24 m-t-auto profile-bar d-none">
         <div class="bg-light-accent d-flex align-items-center rounded p-16">
           <img src="/assets/images/profile/user-1.jpg" class="rounded-circle" width="40" />
           <div class="m-l-16">
@@ -97,7 +97,7 @@
       <main class="pageWrapper" [ngClass]="{
         maxWidth: options.boxed
       }">
-        <app-breadcrumb></app-breadcrumb>
+        <app-breadcrumb class="d-none"></app-breadcrumb>
         <!-- ============================================================== -->
         <!-- Outlet -->
         <!-- ============================================================== -->
